syntax = "proto3";

package com.yxdtyut.grpc;

option java_package = "com.yxdtyut.grpc";
option java_outer_classname = "StudentProto3";
option java_multiple_files = true;

service StudentService {
    rpc getRealnameBuUsername (MyRequest) returns (MyResponse){}
    rpc GetStudentByAge(StudentRequest) returns (stream StudentResponse){}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 1;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}